# cli

./: Cargo.toml  Cross.toml  readme.md
.github/workflows/: rust.yml
src/: commands  commands_table.rs  help_page  main.rs  tables.rs
src/handlers/: cn7500.rs  mod.rs  str1.rs  waveshare.rs  wavesharev2.rs
