[package]
name = "NBC_cli"
version = "2.0.0"
authors = ["llamicron <llamicron@gmail.com>"]
repository = "https://github.com/NavasotaBrewing/cli"
documentation = "https://github.com/NavasotaBrewing/cli"
description = "A CLI for NavasotaBrewing/brewdrivers"
readme = "readme.md"
license = "MIT"
edition = "2018"

[dependencies]
nbc_iris = { path = "/home/llamicron/code/NavasotaBrewing/iris" }
brewdrivers = { path = "/home/llamicron/code/NavasotaBrewing/brewdrivers" }
tokio = "1.0"
shellfish = { version = "0.6.0", features = ["rustyline", "app", "async"] }
