[package]
name = "NBC_cli"
version = "4.5.0"
authors = ["llamicron <llamicron@gmail.com>"]
repository = "https://github.com/NavasotaBrewing/cli"
documentation = "https://github.com/NavasotaBrewing/cli"
description = "A CLI for NavasotaBrewing/brewdrivers"
readme = "readme.md"
license = "MIT"
edition = "2018"

[dependencies]
tokio = "1.0"
shellfish = { version = "0.6.0", features = ["rustyline", "app", "async"] }
term-table = "1.3.2"
chrono = "0.4.22"
termion = "1.5.6"
log = "0.4.17"
env_logger = "0.9.1"

[dependencies.brewdrivers]
version = "0.16.1"
# path = "/home/llamicron/usr/dev/NavasotaBrewing/brewdrivers"
